--- a/Drunken-Llama-Prophecy.cbp
+++ b/Drunken-Llama-Prophecy.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-lSDL2 -lSDL2_image -lSDL2_mixer" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Drunken-Llama-Prophecy" prefix_auto="1" extension_auto="1" />
@@ -36,8 +39,6 @@
 		<Unit filename="include/GameEngine.hpp" />
 		<Unit filename="include/GameState.hpp" />
 		<Unit filename="include/Initializer.hpp" />
-		<Unit filename="include/ItemParser.hpp" />
-		<Unit filename="include/LocationParser.hpp" />
 		<Unit filename="include/Logger.hpp" />
 		<Unit filename="include/MenuState.hpp" />
 		<Unit filename="include/Printable.hpp" />
@@ -45,12 +46,11 @@
 		<Unit filename="include/Timer.hpp" />
 		<Unit filename="include/Window.hpp" />
 		<Unit filename="include/World.hpp" />
+		<Unit filename="main.cpp" />
 		<Unit filename="src/CollisionChecker.cpp" />
-		<Unit filename="src/Command.cpp" />
 		<Unit filename="src/GameEngine.cpp" />
 		<Unit filename="src/GameState.cpp" />
 		<Unit filename="src/Initializer.cpp" />
-		<Unit filename="src/ItemParser.cpp" />
 		<Unit filename="src/LocationParser.cpp" />
 		<Unit filename="src/Logger.cpp" />
 		<Unit filename="src/MenuState.cpp" />
