Preparing for ExitState

--- a/Drunken-Llama-Prophecy.cbp
+++ b/Drunken-Llama-Prophecy.cbp
@@ -38,6 +38,7 @@
 		</Compiler>
 		<Unit filename="include/Command.hpp" />
 		<Unit filename="include/DummyButton.hpp" />
+		<Unit filename="include/ExitState.hpp" />
 		<Unit filename="include/GameEngine.hpp" />
 		<Unit filename="include/GameState.hpp" />
 		<Unit filename="include/Initializer.hpp" />
@@ -50,6 +51,7 @@
 		<Unit filename="include/World.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/DummyButton.cpp" />
+		<Unit filename="src/ExitState.cpp" />
 		<Unit filename="src/GameEngine.cpp" />
 		<Unit filename="src/GameState.cpp" />
 		<Unit filename="src/Initializer.cpp" />
