--- a/Drunken-Llama-Prophecy.cbp
+++ b/Drunken-Llama-Prophecy.cbp
@@ -37,12 +37,12 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="include/Command.hpp" />
-		<Unit filename="include/DummyButton.hpp" />
 		<Unit filename="include/ExitState.hpp" />
 		<Unit filename="include/GameEngine.hpp" />
 		<Unit filename="include/GameState.hpp" />
 		<Unit filename="include/Initializer.hpp" />
 		<Unit filename="include/Logger.hpp" />
+		<Unit filename="include/Manager.hpp" />
 		<Unit filename="include/MenuState.hpp" />
 		<Unit filename="include/Printable.hpp" />
 		<Unit filename="include/Texture.hpp" />
@@ -50,7 +50,6 @@
 		<Unit filename="include/Window.hpp" />
 		<Unit filename="include/World.hpp" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/DummyButton.cpp" />
 		<Unit filename="src/ExitState.cpp" />
 		<Unit filename="src/GameEngine.cpp" />
 		<Unit filename="src/GameState.cpp" />
