Added optional(with uncommenting) fps capper in GameEngine. Made GameEngine draw everything. Made GameEngine clear screen and draw it afterwards(calling Window::DrawEverything() no longer needed). Started making Hex class for handling Hexagons and their coordinates. Removed some TODO comments. Fixed MenuState bug that caused iterator to iter depending only on MenuState's button count, even in children classes.

--- a/Drunken-Llama-Prophecy.cbp
+++ b/Drunken-Llama-Prophecy.cbp
@@ -41,6 +41,7 @@
 		<Unit filename="include/ExitState.hpp" />
 		<Unit filename="include/GameEngine.hpp" />
 		<Unit filename="include/GameState.hpp" />
+		<Unit filename="include/Hex.hpp" />
 		<Unit filename="include/Initializer.hpp" />
 		<Unit filename="include/Logger.hpp" />
 		<Unit filename="include/Manager.hpp" />
@@ -57,6 +58,7 @@
 		<Unit filename="src/ExitState.cpp" />
 		<Unit filename="src/GameEngine.cpp" />
 		<Unit filename="src/GameState.cpp" />
+		<Unit filename="src/Hex.cpp" />
 		<Unit filename="src/Initializer.cpp" />
 		<Unit filename="src/Logger.cpp" />
 		<Unit filename="src/MenuState.cpp" />
