--- a/Drunken-Llama-Prophecy.cbp
+++ b/Drunken-Llama-Prophecy.cbp
@@ -42,6 +42,7 @@
 		<Unit filename="include/Character.hpp">
 			<Option compile="1" />
 		</Unit>
+		<Unit filename="include/Collision.hpp" />
 		<Unit filename="include/Command.hpp">
 			<Option compile="1" />
 		</Unit>
