Added MapGenerator. You can now go to generating map by "Save game" feature. :) Modified some files in order to get it working. After quiting(by cross), you get your map saved in media/SavedMap.map. If you don't make backup, it's going to get overwritten, so take care!

--- a/Drunken-Llama-Prophecy.cbp
+++ b/Drunken-Llama-Prophecy.cbp
@@ -57,7 +57,9 @@
 		<Unit filename="include/GameEngine.hpp">
 			<Option compile="1" />
 		</Unit>
-		<Unit filename="include/GameLogic.hpp" />
+		<Unit filename="include/GameLogic.hpp">
+			<Option compile="1" />
+		</Unit>
 		<Unit filename="include/GameObject.hpp">
 			<Option compile="1" />
 		</Unit>
