--- a/Drunken-Llama-Prophecy.cbp
+++ b/Drunken-Llama-Prophecy.cbp
@@ -84,6 +84,9 @@
 		<Unit filename="include/Manager.hpp">
 			<Option compile="1" />
 		</Unit>
+		<Unit filename="include/MapGenerator.hpp">
+			<Option compile="1" />
+		</Unit>
 		<Unit filename="include/MenuState.hpp">
 			<Option compile="1" />
 		</Unit>
@@ -133,6 +136,7 @@
 		<Unit filename="src/Initializer.cpp" />
 		<Unit filename="src/Land.cpp" />
 		<Unit filename="src/Logger.cpp" />
+		<Unit filename="src/MapGenerator.cpp" />
 		<Unit filename="src/MenuState.cpp" />
 		<Unit filename="src/PauseState.cpp" />
 		<Unit filename="src/PlayState.cpp" />
